@@ -1,3 +1,6 @@
+2010-02-02 Ozan Çağlayan <ozan@pardus.org.tr>
+		* pisi/component.py(Maintainer): Add Maintainer tag to components.xml.
+
 2010-01-26 Serdar Dalgıç <serdar@pardus.org.tr>
 		* Handle urllib2 errors of dummy .part files created as a result of unreachable
 		translations.xml's. Fixes #12136.
